WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
31527
QWebPageClient.h needs in some cases QCursor, but it does not include it
https://bugs.webkit.org/show_bug.cgi?id=31527
Summary
QWebPageClient.h needs in some cases QCursor, but it does not include it
Carol Szabo
Reported
2009-11-15 18:58:53 PST
WebKit Style specifies that a header file should include all header files it relies on except for config.h QWebPageClient.h does not adhere to this standard in regards to QCursor Patch coming soon.
Attachments
Proposed Patch
(1.08 KB, patch)
2009-11-15 19:22 PST
,
Carol Szabo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carol Szabo
Comment 1
2009-11-15 19:22:21 PST
Created
attachment 43261
[details]
Proposed Patch
WebKit Commit Bot
Comment 2
2009-11-17 12:45:39 PST
Comment on
attachment 43261
[details]
Proposed Patch Rejecting patch 43261 from commit-queue. Failed to run "['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1']" exit_code: 1 Running build-dumprendertree Running tests from /Users/eseidel/Projects/CommitQueue/LayoutTests Testing 11628 test cases. inspector/console-dir.html -> crashed Exiting early after 1 failures. 9322 tests run. 367.50s total testing time 9321 test cases (99%) succeeded 1 test case (<1%) crashed 5 test cases (<1%) had stderr output
Eric Seidel (no email)
Comment 3
2009-11-17 13:05:08 PST
Comment on
attachment 43261
[details]
Proposed Patch Sigh.
Bug 31461
.
WebKit Commit Bot
Comment 4
2009-11-18 14:33:54 PST
Comment on
attachment 43261
[details]
Proposed Patch Clearing flags on attachment: 43261 Committed
r51137
: <
http://trac.webkit.org/changeset/51137
>
WebKit Commit Bot
Comment 5
2009-11-18 14:33:59 PST
All reviewed patches have been landed. Closing bug.
Mike Wyrzykowski
Comment 6
2026-05-25 12:14:26 PDT
<
rdar://problem/177664498
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug