2009-11-18  Carol Szabo  <carol.szabo@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] QWebPageClient.h needs in some cases QCursor, but it does not
        include it
        https://bugs.webkit.org/show_bug.cgi?id=31527

        No new tests as this is just a coding style fix that affects the
        build of some not yet submitted patches (i.e. for bug 30173).

        * platform/qt/QWebPageClient.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@51137 bbb929c8-8fbe-4397-9dbb-9b2b20218538