third_party/WebKit/WebCore/platform/qt/QWebPageClient.h
@@ -27,6 +27,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #ifndef QWebPageClient_h
 #define QWebPageClient_h
 
+#ifndef QT_NO_CURSOR
+#include <QCursor>;
+#endif
 #include <QRect>
 
 class QWebPageClient {
